<resources>
    <string name="app_name">kofounder</string>

    <!-- Title Text -->
    <string name="title_daftar">Daftar</string>

    <!-- Edit Button Daftar -->
    <string name="edt_username">Username</string>
    <string name="edt_email">Email</string>
    <string name="edt_fullname">Nama Lengkap</string>
    <string name="edt_nohp">No.Handphone</string>
    <string name="edt_password">Password</string>
    <string name="edt_confpass">Ketik Ulang Password</string>

    <!-- Button -->
    <string name="btn_masuk">Masuk</string>
    <string name="btn_daftar">Daftar</string>
    <string name="btn_google">Google</string>
    <string name="btn_linkedin">Linkedin</string>

    <!-- Help -->
    <string name="masuk">Sudah memiliki akun? Silahkan masuk</string>
    <string name="daftar">Belum memiliki akun? Daftar</string>
    <string name="lupa_sandi">Lupa kata sandi?</string>
    <string name="syarat">Dengan mendaftar,saya telah menyetujui Syarat dan Ketentuan serta Kebijakan Privasi</string>
    <string name="other_login">Atau masuk dengan:</string>

    <!-- Bottom Navigation -->
    <string name="bnv_home">Home</string>
    <string name="bnv_network">Network</string>
    <string name="bnv_mentor">Mentor</string>
    <string name="bnv_akun">Akun</string>

</resources>
